# ghaf-ctrl-panel

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  scorecards.yml
nix/: default.nix  devshell.nix  treefmt.nix
proto/: admin.proto
scripts/: update-deps.sh
src/: about.rs  add_network_popup.rs  admin_settings_page.rs  application.rs  audio_control.rs  audio_device_gobject.rs  audio_settings.rs  bug_report_settings_page.rs  bugreport.gresource.xml  bugreport.rs  client.rs  confirm_display_settings_popup.rs  confirm_resolution_popup.rs  connection_config.rs  control_action.rs  control_panel_gui.gresource.xml  data_gobject.rs  data_provider.rs  display_settings_page.rs  error_popup.rs  github.rs  info_settings_page.rs  keyboard_settings_page.rs  language_region_notify_popup.rs  language_region_settings_page.rs  locale_provider.rs  main.rs  memory_settings.rs  mouse_settings_page.rs  plot.rs  prelude.rs  report.rs  security_icon.rs  security_settings_page.rs  serie.rs  service_gobject.rs  service_model.rs  service_row.rs  service_settings.rs  settings.rs  (+17 more)
src/styles/: style.css
src/ui/: about.ui  add_network_popup.ui  admin_settings_page.ui  audio_settings.ui  bug_report_settings_page.ui  bugreport_window.ui  confirm_display_settings_popup.ui  confirm_resolution_popup.ui  connection_config.ui  display_settings_page.ui  error_popup.ui  info_settings_page.ui  keyboard_settings_page.ui  language_region_notify_popup.ui  language_region_settings_page.ui  memory_settings.ui  mouse_settings_page.ui  report.ui  security_settings_page.ui  service_row.ui  service_settings.ui  settings.ui  stats_window.ui  vm_row.ui  vm_row_2.ui  vm_settings.ui  volume_widget.ui  wifi_settings_page.ui  window.ui
