[package]
name = "control_panel_gui"
version = "0.1.0"
edition = "2021"
default-run = "ctrl-panel"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_4"] }
anyhow = "1.0.98"
async-channel = "2.3.1"
chrono = "0.4"
clap = {version = "4.5.37", features = ["derive", "env"] }
env_logger = "0.11.8"
futures = "0.3"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_10"] }
http = "1.0.0"
log = "0.4.27"
octocrab = "0.44"
pangocairo = "0.20.7"
regex = "1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
syslog = "7.0.0"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt", "time", "macros"] }
toml = "0.9"
zbus = "5.11"

givc-client = { git = "https://github.com/tiiuae/ghaf-givc", branch = "main" }
givc-common = { git = "https://github.com/tiiuae/ghaf-givc", branch = "main", features = ["glib"] }

[features]
mock = []

[lints.clippy]
pedantic = "deny"

[build-dependencies]
glib-build-tools = "0.20"

[[bin]]
name = "ctrl-panel"
path = "src/main.rs"

[[bin]]
name = "bug-reporter"
path = "src/bugreport.rs"
