[package]
name = "control_panel_gui"
version = "0.1.0"
edition = "2021"
default-run = "ctrl-panel"

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
anyhow = "1.0.100"
async-channel = "2.5.0"
chrono = "0.4"
clap = {version = "4.5.50", features = ["derive", "env"] }
env_logger = "0.11.8"
futures = "0.3"
gtk = { version = "0.10", package = "gtk4", features = ["v4_18"] }
http = "1.3.1"
log = "0.4.28"
octocrab = "0.47"
pangocairo = "0.21"
regex = "1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
syslog = "7.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["rt", "time", "macros"] }
toml = "0.9"
zbus = "5.12"

givc-client = { git = "https://github.com/tiiuae/ghaf-givc", branch = "main" }
givc-common = { git = "https://github.com/tiiuae/ghaf-givc", branch = "main", features = ["glib"] }

[features]
mock = []

[lints.clippy]
pedantic = "deny"

[build-dependencies]
glib-build-tools = "0.21"

[[bin]]
name = "ctrl-panel"
path = "src/main.rs"

[[bin]]
name = "bug-reporter"
path = "src/bugreport.rs"
