[package]
name = "control_panel_gui"
version = "0.1.0"
edition = "2024"
default-run = "ctrl-panel"

[dependencies]
adw = { version = "0.9", package = "libadwaita", features = ["v1_7"] }
anyhow = "1.0"
async-channel = "2.5"
chrono = "0.4"
clap = {version = "4.5.56", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
gtk = { version = "0.11", package = "gtk4", features = ["v4_18"] }
http = "1.4"
log = "0.4"
octocrab = "0.49"
pangocairo = "0.22"
regex = "1"
secrecy = { version = "0.10", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
syslog = "7.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt", "time", "macros"] }
toml = "1"
zbus = "5.13"

givc-client = { git = "https://github.com/tiiuae/ghaf-givc", branch = "main" }
givc-common = { git = "https://github.com/tiiuae/ghaf-givc", branch = "main", features = ["glib"] }

[features]
mock = []

[lints.clippy]
pedantic = "deny"

[build-dependencies]
glib-build-tools = "0.22"

[[bin]]
name = "ctrl-panel"
path = "src/main.rs"

[[bin]]
name = "bug-reporter"
path = "src/bugreport.rs"
